parser.output
Terminals unused in grammar

   T_EXPRESSION
   T_ELIF


Grammar

    0 $accept: Start $end

    1 Start: Class

    2 Class: T_ID T_OPENBRACE Line T_CLOSEBRACE Class
    3      | T_ID T_EXTENDS Class
    4      | T_ID T_OPENBRACE T_CLOSEBRACE Class
    5      | %empty

    6 Line: T_ID T_ASSIGN Expr T_SEMICOLON Emptable_Line
    7     | T_ID T_DOT T_ID T_ASSIGN Expr T_SEMICOLON Emptable_Line
    8     | T_TYPE ID_Series T_SEMICOLON Emptable_Line
    9     | T_ID ID_Series T_SEMICOLON Emptable_Line
   10     | T_PRINT Expr T_SEMICOLON Emptable_Line
   11     | T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Lambda Emptable_Line
   12     | T_IF If Emptable_Line
   13     | T_WHILE Expr T_OPENBRACE Line T_CLOSEBRACE Emptable_Line
   14     | T_DO Do_While T_SEMICOLON Emptable_Line

   15 Emptable_Line: T_ID T_ASSIGN Expr T_SEMICOLON Emptable_Line
   16              | T_ID T_DOT T_ID T_ASSIGN Expr T_SEMICOLON Emptable_Line
   17              | T_TYPE ID_Series T_SEMICOLON Emptable_Line
   18              | T_ID ID_Series T_SEMICOLON Emptable_Line
   19              | T_PRINT Expr T_SEMICOLON Emptable_Line
   20              | T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Lambda Emptable_Line
   21              | T_IF If Emptable_Line
   22              | T_WHILE Expr T_OPENBRACE Line T_CLOSEBRACE Emptable_Line
   23              | T_DO Do_While T_SEMICOLON Emptable_Line
   24              | %empty

   25 If: Expr T_OPENBRACE Line T_CLOSEBRACE
   26   | Expr T_OPENBRACE Line T_CLOSEBRACE T_ELSE Else

   27 Else: T_OPENBRACE Line T_CLOSEBRACE

   28 Do_While: T_OPENBRACE Line T_CLOSEBRACE T_WHILE Expr

   29 Lambda: T_TYPE T_OPENBRACE Emptable_Line Return T_CLOSEBRACE
   30       | T_ID T_OPENBRACE Emptable_Line Return T_CLOSEBRACE
   31       | T_NONE T_OPENBRACE Emptable_Line T_CLOSEBRACE

   32 Return: T_RETURN Expr T_SEMICOLON

   33 Expr: Expr T_PLUS Expr
   34     | Expr T_MINUS Expr
   35     | Expr T_MULTIPLY Expr
   36     | Expr T_DIVIDE Expr
   37     | Expr T_LARGERTHAN Expr
   38     | Expr T_LARGEREQUAL Expr
   39     | Expr T_LESSTHAN Expr
   40     | Expr T_LESSEQUAL Expr
   41     | Expr T_EQUALS Expr
   42     | Expr T_AND Expr
   43     | Expr T_OR Expr
   44     | T_NOT Expr
   45     | T_MINUS Expr
   46     | T_ID
   47     | T_ID T_DOT T_ID
   48     | MethodCall
   49     | T_OPENPAREN Expr T_CLOSEPAREN
   50     | T_NUMBER
   51     | T_TRUE
   52     | T_FALSE
   53     | T_NEW T_ID
   54     | T_NEW T_ID T_OPENPAREN Arguments T_CLOSEPAREN
   55     | T_NEW T_ID T_OPENPAREN T_CLOSEPAREN

   56 Parameters: T_TYPE T_ID T_COMMA NonNull_Parameters
   57           | T_ID T_ID T_COMMA NonNull_Parameters
   58           | T_TYPE T_ID
   59           | T_ID T_ID
   60           | %empty

   61 NonNull_Parameters: T_TYPE T_ID T_COMMA NonNull_Parameters
   62                   | T_ID T_ID T_COMMA NonNull_Parameters
   63                   | T_TYPE T_ID
   64                   | T_ID T_ID

   65 ID_Series: T_ID T_COMMA ID_Series
   66          | T_ID

   67 MethodCall: T_ID T_OPENPAREN T_CLOSEPAREN
   68           | T_ID T_OPENPAREN Arguments T_CLOSEPAREN
   69           | T_ID T_DOT T_ID T_OPENPAREN T_CLOSEPAREN
   70           | T_ID T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN

   71 Arguments: Arguments_prime

   72 Arguments_prime: Arguments_prime T_COMMA Expr
   73                | Expr


Terminals, with rules where they appear

$end (0) 0
error (256)
T_EXPRESSION (258)
T_NUMBER (259) 50
T_ID (260) 2 3 4 6 7 9 11 15 16 18 20 30 46 47 53 54 55 56 57 58 59
    61 62 63 64 65 66 67 68 69 70
T_PLUS (261) 33
T_MINUS (262) 34 45
T_MULTIPLY (263) 35
T_DIVIDE (264) 36
T_LARGERTHAN (265) 37
T_LARGEREQUAL (266) 38
T_LESSTHAN (267) 39
T_LESSEQUAL (268) 40
T_PRINT (269) 10 19
T_RETURN (270) 32
T_IF (271) 12 21
T_ELSE (272) 26
T_ELIF (273)
T_WHILE (274) 13 22 28
T_NEW (275) 53 54 55
T_NONE (276) 31
T_EQUALS (277) 41
T_TYPE (278) 8 17 29 56 58 61 63
T_AND (279) 42
T_OR (280) 43
T_NOT (281) 44
T_TRUE (282) 51
T_FALSE (283) 52
T_EXTENDS (284) 3
T_DO (285) 14 23
T_OPENPAREN (286) 11 20 49 54 55 67 68 69 70
T_CLOSEPAREN (287) 11 20 49 54 55 67 68 69 70
T_OPENBRACE (288) 2 4 13 22 25 26 27 28 29 30 31
T_CLOSEBRACE (289) 2 4 13 22 25 26 27 28 29 30 31
T_DOT (290) 7 16 47 69 70
T_COMMA (291) 56 57 61 62 65 72
T_SEMICOLON (292) 6 7 8 9 10 14 15 16 17 18 19 23 32
T_ARROW (293) 11 20
T_ASSIGN (294) 6 7 15 16
T_UNARYMINUS (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Start (42)
    on left: 1, on right: 0
Class (43)
    on left: 2 3 4 5, on right: 1 2 3 4
Line (44)
    on left: 6 7 8 9 10 11 12 13 14, on right: 2 13 22 25 26 27 28
Emptable_Line (45)
    on left: 15 16 17 18 19 20 21 22 23 24, on right: 6 7 8 9 10 11
    12 13 14 15 16 17 18 19 20 21 22 23 29 30 31
If (46)
    on left: 25 26, on right: 12 21
Else (47)
    on left: 27, on right: 26
Do_While (48)
    on left: 28, on right: 14 23
Lambda (49)
    on left: 29 30 31, on right: 11 20
Return (50)
    on left: 32, on right: 29 30
Expr (51)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55, on right: 6 7 10 13 15 16 19 22 25 26 28 32 33
    34 35 36 37 38 39 40 41 42 43 44 45 49 72 73
Parameters (52)
    on left: 56 57 58 59 60, on right: 11 20
NonNull_Parameters (53)
    on left: 61 62 63 64, on right: 56 57 61 62
ID_Series (54)
    on left: 65 66, on right: 8 9 17 18 65
MethodCall (55)
    on left: 67 68 69 70, on right: 48
Arguments (56)
    on left: 71, on right: 54 68 70
Arguments_prime (57)
    on left: 72 73, on right: 71 72


State 0

    0 $accept: . Start $end

    T_ID  shift, and go to state 1

    $default  reduce using rule 5 (Class)

    Start  go to state 2
    Class  go to state 3


State 1

    2 Class: T_ID . T_OPENBRACE Line T_CLOSEBRACE Class
    3      | T_ID . T_EXTENDS Class
    4      | T_ID . T_OPENBRACE T_CLOSEBRACE Class

    T_EXTENDS    shift, and go to state 4
    T_OPENBRACE  shift, and go to state 5


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 6


State 3

    1 Start: Class .

    $default  reduce using rule 1 (Start)


State 4

    3 Class: T_ID T_EXTENDS . Class

    T_ID  shift, and go to state 1

    $default  reduce using rule 5 (Class)

    Class  go to state 7


State 5

    2 Class: T_ID T_OPENBRACE . Line T_CLOSEBRACE Class
    4      | T_ID T_OPENBRACE . T_CLOSEBRACE Class

    T_ID          shift, and go to state 8
    T_PRINT       shift, and go to state 9
    T_IF          shift, and go to state 10
    T_WHILE       shift, and go to state 11
    T_TYPE        shift, and go to state 12
    T_DO          shift, and go to state 13
    T_CLOSEBRACE  shift, and go to state 14

    Line  go to state 15


State 6

    0 $accept: Start $end .

    $default  accept


State 7

    3 Class: T_ID T_EXTENDS Class .

    $default  reduce using rule 3 (Class)


State 8

    6 Line: T_ID . T_ASSIGN Expr T_SEMICOLON Emptable_Line
    7     | T_ID . T_DOT T_ID T_ASSIGN Expr T_SEMICOLON Emptable_Line
    9     | T_ID . ID_Series T_SEMICOLON Emptable_Line
   11     | T_ID . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Lambda Emptable_Line

    T_ID         shift, and go to state 16
    T_OPENPAREN  shift, and go to state 17
    T_DOT        shift, and go to state 18
    T_ASSIGN     shift, and go to state 19

    ID_Series  go to state 20


State 9

   10 Line: T_PRINT . Expr T_SEMICOLON Emptable_Line

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 29
    MethodCall  go to state 30


State 10

   12 Line: T_IF . If Emptable_Line

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    If          go to state 31
    Expr        go to state 32
    MethodCall  go to state 30


State 11

   13 Line: T_WHILE . Expr T_OPENBRACE Line T_CLOSEBRACE Emptable_Line

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 33
    MethodCall  go to state 30


State 12

    8 Line: T_TYPE . ID_Series T_SEMICOLON Emptable_Line

    T_ID  shift, and go to state 16

    ID_Series  go to state 34


State 13

   14 Line: T_DO . Do_While T_SEMICOLON Emptable_Line

    T_OPENBRACE  shift, and go to state 35

    Do_While  go to state 36


State 14

    4 Class: T_ID T_OPENBRACE T_CLOSEBRACE . Class

    T_ID  shift, and go to state 1

    $default  reduce using rule 5 (Class)

    Class  go to state 37


State 15

    2 Class: T_ID T_OPENBRACE Line . T_CLOSEBRACE Class

    T_CLOSEBRACE  shift, and go to state 38


State 16

   65 ID_Series: T_ID . T_COMMA ID_Series
   66          | T_ID .

    T_COMMA  shift, and go to state 39

    $default  reduce using rule 66 (ID_Series)


State 17

   11 Line: T_ID T_OPENPAREN . Parameters T_CLOSEPAREN T_ARROW Lambda Emptable_Line

    T_ID    shift, and go to state 40
    T_TYPE  shift, and go to state 41

    $default  reduce using rule 60 (Parameters)

    Parameters  go to state 42


State 18

    7 Line: T_ID T_DOT . T_ID T_ASSIGN Expr T_SEMICOLON Emptable_Line

    T_ID  shift, and go to state 43


State 19

    6 Line: T_ID T_ASSIGN . Expr T_SEMICOLON Emptable_Line

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 44
    MethodCall  go to state 30


State 20

    9 Line: T_ID ID_Series . T_SEMICOLON Emptable_Line

    T_SEMICOLON  shift, and go to state 45


State 21

   50 Expr: T_NUMBER .

    $default  reduce using rule 50 (Expr)


State 22

   46 Expr: T_ID .
   47     | T_ID . T_DOT T_ID
   67 MethodCall: T_ID . T_OPENPAREN T_CLOSEPAREN
   68           | T_ID . T_OPENPAREN Arguments T_CLOSEPAREN
   69           | T_ID . T_DOT T_ID T_OPENPAREN T_CLOSEPAREN
   70           | T_ID . T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 46
    T_DOT        shift, and go to state 47

    $default  reduce using rule 46 (Expr)


State 23

   45 Expr: T_MINUS . Expr

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 48
    MethodCall  go to state 30


State 24

   53 Expr: T_NEW . T_ID
   54     | T_NEW . T_ID T_OPENPAREN Arguments T_CLOSEPAREN
   55     | T_NEW . T_ID T_OPENPAREN T_CLOSEPAREN

    T_ID  shift, and go to state 49


State 25

   44 Expr: T_NOT . Expr

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 50
    MethodCall  go to state 30


State 26

   51 Expr: T_TRUE .

    $default  reduce using rule 51 (Expr)


State 27

   52 Expr: T_FALSE .

    $default  reduce using rule 52 (Expr)


State 28

   49 Expr: T_OPENPAREN . Expr T_CLOSEPAREN

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 51
    MethodCall  go to state 30


State 29

   10 Line: T_PRINT Expr . T_SEMICOLON Emptable_Line
   33 Expr: Expr . T_PLUS Expr
   34     | Expr . T_MINUS Expr
   35     | Expr . T_MULTIPLY Expr
   36     | Expr . T_DIVIDE Expr
   37     | Expr . T_LARGERTHAN Expr
   38     | Expr . T_LARGEREQUAL Expr
   39     | Expr . T_LESSTHAN Expr
   40     | Expr . T_LESSEQUAL Expr
   41     | Expr . T_EQUALS Expr
   42     | Expr . T_AND Expr
   43     | Expr . T_OR Expr

    T_PLUS         shift, and go to state 52
    T_MINUS        shift, and go to state 53
    T_MULTIPLY     shift, and go to state 54
    T_DIVIDE       shift, and go to state 55
    T_LARGERTHAN   shift, and go to state 56
    T_LARGEREQUAL  shift, and go to state 57
    T_LESSTHAN     shift, and go to state 58
    T_LESSEQUAL    shift, and go to state 59
    T_EQUALS       shift, and go to state 60
    T_AND          shift, and go to state 61
    T_OR           shift, and go to state 62
    T_SEMICOLON    shift, and go to state 63


State 30

   48 Expr: MethodCall .

    $default  reduce using rule 48 (Expr)


State 31

   12 Line: T_IF If . Emptable_Line

    T_ID     shift, and go to state 64
    T_PRINT  shift, and go to state 65
    T_IF     shift, and go to state 66
    T_WHILE  shift, and go to state 67
    T_TYPE   shift, and go to state 68
    T_DO     shift, and go to state 69

    $default  reduce using rule 24 (Emptable_Line)

    Emptable_Line  go to state 70


State 32

   25 If: Expr . T_OPENBRACE Line T_CLOSEBRACE
   26   | Expr . T_OPENBRACE Line T_CLOSEBRACE T_ELSE Else
   33 Expr: Expr . T_PLUS Expr
   34     | Expr . T_MINUS Expr
   35     | Expr . T_MULTIPLY Expr
   36     | Expr . T_DIVIDE Expr
   37     | Expr . T_LARGERTHAN Expr
   38     | Expr . T_LARGEREQUAL Expr
   39     | Expr . T_LESSTHAN Expr
   40     | Expr . T_LESSEQUAL Expr
   41     | Expr . T_EQUALS Expr
   42     | Expr . T_AND Expr
   43     | Expr . T_OR Expr

    T_PLUS         shift, and go to state 52
    T_MINUS        shift, and go to state 53
    T_MULTIPLY     shift, and go to state 54
    T_DIVIDE       shift, and go to state 55
    T_LARGERTHAN   shift, and go to state 56
    T_LARGEREQUAL  shift, and go to state 57
    T_LESSTHAN     shift, and go to state 58
    T_LESSEQUAL    shift, and go to state 59
    T_EQUALS       shift, and go to state 60
    T_AND          shift, and go to state 61
    T_OR           shift, and go to state 62
    T_OPENBRACE    shift, and go to state 71


State 33

   13 Line: T_WHILE Expr . T_OPENBRACE Line T_CLOSEBRACE Emptable_Line
   33 Expr: Expr . T_PLUS Expr
   34     | Expr . T_MINUS Expr
   35     | Expr . T_MULTIPLY Expr
   36     | Expr . T_DIVIDE Expr
   37     | Expr . T_LARGERTHAN Expr
   38     | Expr . T_LARGEREQUAL Expr
   39     | Expr . T_LESSTHAN Expr
   40     | Expr . T_LESSEQUAL Expr
   41     | Expr . T_EQUALS Expr
   42     | Expr . T_AND Expr
   43     | Expr . T_OR Expr

    T_PLUS         shift, and go to state 52
    T_MINUS        shift, and go to state 53
    T_MULTIPLY     shift, and go to state 54
    T_DIVIDE       shift, and go to state 55
    T_LARGERTHAN   shift, and go to state 56
    T_LARGEREQUAL  shift, and go to state 57
    T_LESSTHAN     shift, and go to state 58
    T_LESSEQUAL    shift, and go to state 59
    T_EQUALS       shift, and go to state 60
    T_AND          shift, and go to state 61
    T_OR           shift, and go to state 62
    T_OPENBRACE    shift, and go to state 72


State 34

    8 Line: T_TYPE ID_Series . T_SEMICOLON Emptable_Line

    T_SEMICOLON  shift, and go to state 73


State 35

   28 Do_While: T_OPENBRACE . Line T_CLOSEBRACE T_WHILE Expr

    T_ID     shift, and go to state 8
    T_PRINT  shift, and go to state 9
    T_IF     shift, and go to state 10
    T_WHILE  shift, and go to state 11
    T_TYPE   shift, and go to state 12
    T_DO     shift, and go to state 13

    Line  go to state 74


State 36

   14 Line: T_DO Do_While . T_SEMICOLON Emptable_Line

    T_SEMICOLON  shift, and go to state 75


State 37

    4 Class: T_ID T_OPENBRACE T_CLOSEBRACE Class .

    $default  reduce using rule 4 (Class)


State 38

    2 Class: T_ID T_OPENBRACE Line T_CLOSEBRACE . Class

    T_ID  shift, and go to state 1

    $default  reduce using rule 5 (Class)

    Class  go to state 76


State 39

   65 ID_Series: T_ID T_COMMA . ID_Series

    T_ID  shift, and go to state 16

    ID_Series  go to state 77


State 40

   57 Parameters: T_ID . T_ID T_COMMA NonNull_Parameters
   59           | T_ID . T_ID

    T_ID  shift, and go to state 78


State 41

   56 Parameters: T_TYPE . T_ID T_COMMA NonNull_Parameters
   58           | T_TYPE . T_ID

    T_ID  shift, and go to state 79


State 42

   11 Line: T_ID T_OPENPAREN Parameters . T_CLOSEPAREN T_ARROW Lambda Emptable_Line

    T_CLOSEPAREN  shift, and go to state 80


State 43

    7 Line: T_ID T_DOT T_ID . T_ASSIGN Expr T_SEMICOLON Emptable_Line

    T_ASSIGN  shift, and go to state 81


State 44

    6 Line: T_ID T_ASSIGN Expr . T_SEMICOLON Emptable_Line
   33 Expr: Expr . T_PLUS Expr
   34     | Expr . T_MINUS Expr
   35     | Expr . T_MULTIPLY Expr
   36     | Expr . T_DIVIDE Expr
   37     | Expr . T_LARGERTHAN Expr
   38     | Expr . T_LARGEREQUAL Expr
   39     | Expr . T_LESSTHAN Expr
   40     | Expr . T_LESSEQUAL Expr
   41     | Expr . T_EQUALS Expr
   42     | Expr . T_AND Expr
   43     | Expr . T_OR Expr

    T_PLUS         shift, and go to state 52
    T_MINUS        shift, and go to state 53
    T_MULTIPLY     shift, and go to state 54
    T_DIVIDE       shift, and go to state 55
    T_LARGERTHAN   shift, and go to state 56
    T_LARGEREQUAL  shift, and go to state 57
    T_LESSTHAN     shift, and go to state 58
    T_LESSEQUAL    shift, and go to state 59
    T_EQUALS       shift, and go to state 60
    T_AND          shift, and go to state 61
    T_OR           shift, and go to state 62
    T_SEMICOLON    shift, and go to state 82


State 45

    9 Line: T_ID ID_Series T_SEMICOLON . Emptable_Line

    T_ID     shift, and go to state 64
    T_PRINT  shift, and go to state 65
    T_IF     shift, and go to state 66
    T_WHILE  shift, and go to state 67
    T_TYPE   shift, and go to state 68
    T_DO     shift, and go to state 69

    $default  reduce using rule 24 (Emptable_Line)

    Emptable_Line  go to state 83


State 46

   67 MethodCall: T_ID T_OPENPAREN . T_CLOSEPAREN
   68           | T_ID T_OPENPAREN . Arguments T_CLOSEPAREN

    T_NUMBER      shift, and go to state 21
    T_ID          shift, and go to state 22
    T_MINUS       shift, and go to state 23
    T_NEW         shift, and go to state 24
    T_NOT         shift, and go to state 25
    T_TRUE        shift, and go to state 26
    T_FALSE       shift, and go to state 27
    T_OPENPAREN   shift, and go to state 28
    T_CLOSEPAREN  shift, and go to state 84

    Expr             go to state 85
    MethodCall       go to state 30
    Arguments        go to state 86
    Arguments_prime  go to state 87


State 47

   47 Expr: T_ID T_DOT . T_ID
   69 MethodCall: T_ID T_DOT . T_ID T_OPENPAREN T_CLOSEPAREN
   70           | T_ID T_DOT . T_ID T_OPENPAREN Arguments T_CLOSEPAREN

    T_ID  shift, and go to state 88


State 48

   33 Expr: Expr . T_PLUS Expr
   34     | Expr . T_MINUS Expr
   35     | Expr . T_MULTIPLY Expr
   36     | Expr . T_DIVIDE Expr
   37     | Expr . T_LARGERTHAN Expr
   38     | Expr . T_LARGEREQUAL Expr
   39     | Expr . T_LESSTHAN Expr
   40     | Expr . T_LESSEQUAL Expr
   41     | Expr . T_EQUALS Expr
   42     | Expr . T_AND Expr
   43     | Expr . T_OR Expr
   45     | T_MINUS Expr .

    $default  reduce using rule 45 (Expr)


State 49

   53 Expr: T_NEW T_ID .
   54     | T_NEW T_ID . T_OPENPAREN Arguments T_CLOSEPAREN
   55     | T_NEW T_ID . T_OPENPAREN T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 89

    $default  reduce using rule 53 (Expr)


State 50

   33 Expr: Expr . T_PLUS Expr
   34     | Expr . T_MINUS Expr
   35     | Expr . T_MULTIPLY Expr
   36     | Expr . T_DIVIDE Expr
   37     | Expr . T_LARGERTHAN Expr
   38     | Expr . T_LARGEREQUAL Expr
   39     | Expr . T_LESSTHAN Expr
   40     | Expr . T_LESSEQUAL Expr
   41     | Expr . T_EQUALS Expr
   42     | Expr . T_AND Expr
   43     | Expr . T_OR Expr
   44     | T_NOT Expr .

    $default  reduce using rule 44 (Expr)


State 51

   33 Expr: Expr . T_PLUS Expr
   34     | Expr . T_MINUS Expr
   35     | Expr . T_MULTIPLY Expr
   36     | Expr . T_DIVIDE Expr
   37     | Expr . T_LARGERTHAN Expr
   38     | Expr . T_LARGEREQUAL Expr
   39     | Expr . T_LESSTHAN Expr
   40     | Expr . T_LESSEQUAL Expr
   41     | Expr . T_EQUALS Expr
   42     | Expr . T_AND Expr
   43     | Expr . T_OR Expr
   49     | T_OPENPAREN Expr . T_CLOSEPAREN

    T_PLUS         shift, and go to state 52
    T_MINUS        shift, and go to state 53
    T_MULTIPLY     shift, and go to state 54
    T_DIVIDE       shift, and go to state 55
    T_LARGERTHAN   shift, and go to state 56
    T_LARGEREQUAL  shift, and go to state 57
    T_LESSTHAN     shift, and go to state 58
    T_LESSEQUAL    shift, and go to state 59
    T_EQUALS       shift, and go to state 60
    T_AND          shift, and go to state 61
    T_OR           shift, and go to state 62
    T_CLOSEPAREN   shift, and go to state 90


State 52

   33 Expr: Expr T_PLUS . Expr

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 91
    MethodCall  go to state 30


State 53

   34 Expr: Expr T_MINUS . Expr

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 92
    MethodCall  go to state 30


State 54

   35 Expr: Expr T_MULTIPLY . Expr

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 93
    MethodCall  go to state 30


State 55

   36 Expr: Expr T_DIVIDE . Expr

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 94
    MethodCall  go to state 30


State 56

   37 Expr: Expr T_LARGERTHAN . Expr

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 95
    MethodCall  go to state 30


State 57

   38 Expr: Expr T_LARGEREQUAL . Expr

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 96
    MethodCall  go to state 30


State 58

   39 Expr: Expr T_LESSTHAN . Expr

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 97
    MethodCall  go to state 30


State 59

   40 Expr: Expr T_LESSEQUAL . Expr

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 98
    MethodCall  go to state 30


State 60

   41 Expr: Expr T_EQUALS . Expr

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 99
    MethodCall  go to state 30


State 61

   42 Expr: Expr T_AND . Expr

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 100
    MethodCall  go to state 30


State 62

   43 Expr: Expr T_OR . Expr

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 101
    MethodCall  go to state 30


State 63

   10 Line: T_PRINT Expr T_SEMICOLON . Emptable_Line

    T_ID     shift, and go to state 64
    T_PRINT  shift, and go to state 65
    T_IF     shift, and go to state 66
    T_WHILE  shift, and go to state 67
    T_TYPE   shift, and go to state 68
    T_DO     shift, and go to state 69

    $default  reduce using rule 24 (Emptable_Line)

    Emptable_Line  go to state 102


State 64

   15 Emptable_Line: T_ID . T_ASSIGN Expr T_SEMICOLON Emptable_Line
   16              | T_ID . T_DOT T_ID T_ASSIGN Expr T_SEMICOLON Emptable_Line
   18              | T_ID . ID_Series T_SEMICOLON Emptable_Line
   20              | T_ID . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Lambda Emptable_Line

    T_ID         shift, and go to state 16
    T_OPENPAREN  shift, and go to state 103
    T_DOT        shift, and go to state 104
    T_ASSIGN     shift, and go to state 105

    ID_Series  go to state 106


State 65

   19 Emptable_Line: T_PRINT . Expr T_SEMICOLON Emptable_Line

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    Expr        go to state 107
    MethodCall  go to state 30


State 66

   21 Emptable_Line: T_IF . If Emptable_Line

    T_NUMBER     shift, and go to state 21
    T_ID         shift, and go to state 22
    T_MINUS      shift, and go to state 23
    T_NEW        shift, and go to state 24
    T_NOT        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_OPENPAREN  shift, and go to state 28

    If          go to state 108
    Expr        go to state 32
    MethodCall  go to state 30


State 67

   22 Emptable_Line: T_WHILE . Expr T_OPENBRACE Line T_CLOSEBRACE Emptable_Line
